improve phrasing, rewrap

--- a/BF/BF 1001-Driver 2023.tex
+++ b/BF/BF 1001-Driver 2023.tex
@@ -296,15 +296,15 @@ The grade structure for \ccode has the following elements.
 
 \begin{enumerate}
 
-	\item \textbf{Notes and quotes} will be solicited from students at the start
-	of each class. These are to be drawn from the primary reading assigned for
-	each week. What do you note about the material on this occasion? What words,
-	phrases, or verses stand out to you from the \cite{njps} translation? Pay
-	attention to things you notice from a survey of large sections of the Bible.
-	Stay alert, too, to details that strike you from the English edition of the
-	Hebrew (Masoretic) text. Make notes as you read. Finally, be prepared to
-	share highlights with the class (three minutes maximum). Participation is
-	required.
+	\item \textbf{Notes and quotes} will be solicited from students at the
+	start of each class. These are to be drawn from the primary reading
+	assigned for each week. What do you note about the material on this
+	occasion? What words, phrases, or verses stand out to you from the
+	\cite{njps} translation? Pay attention to things you notice from a
+	survey of large sections of the Bible. Stay alert, too, to details that
+	strike you from this English edition of the Hebrew (Masoretic) text.
+	Make notes as you read. Finally, be prepared to share highlights with
+	the class (three minutes maximum). Participation is required.
 
 %	\item \textbf{Writing prompts} will be given throughout the
 %	semester. They are low-risk writing exercises designed to encourage
