Final rev (4.0.0) for F23 reboot

--- a/BF/BF 1001-Driver 2023.tex
+++ b/BF/BF 1001-Driver 2023.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[4.0]{BF 1001}
+\coursecode[4.0.0]{BF 1001}
 \coursetitle[Biblical Foundations]{Hebrew Bible/Old Testament}
 
 % Taught as RLGS 1013 in:
@@ -41,7 +41,7 @@
 %   - Fall 2020 - not scheduled Int, but driven online by Covid-19
 %   - Fall 2021(Int)
 %   - Fall 2022(Int) - run in parallel as DTS 2000: Intro to the Old Testament
-%   - Fall 2023 - Version 4.0; on campus; only text: NJPS Study Bible
+%   - Fall 2023 - Version 4.0; back to campus; only text: NJPS Study Bible
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
@@ -65,13 +65,11 @@
 	The broad sweep of biblical tradition will be presented through a survey
 	of representative books from the Law, the Prophets, and the Writings. To
 	help foster an ecumenical outlook, primary readings from the Bible will
-	be supplemented by case studies of classic readings of biblical texts.
-	Students will develop their exegetical skills by studying these
-	examples, and so learn to appreciate the diverse literary, canonical,
-	cultural, historical, hermeneutical, and theological elements involved
-	in biblical interpretation. In addition, the course will consider some
-	ways that the Hebrew Bible/Old Testament can feature in the practice of
-	ministry and in the spiritual practice of faith communities.
+	be supplemented by illustrative commentary from various biblical
+	interpreters. Students will develop their exegetical skills by studying
+	these examples, and so learn to appreciate the diverse canonical,
+	cultural, hermeneutical, historical, literary, and theological elements
+	involved in the art of biblical interpretation.
 }% end of course description
 \objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
 	By the end of the course students should be able to:
@@ -81,7 +79,7 @@
 		recognize and cite examples of most genres of biblical literature;
 		defend a decision to pronounce or circumlocute the Divine Name;
 		understand the general shape of the Masoretic Text tradition and differentiate it from other canonical orders;
-		report on parallel and divergent material across the Law and the Prophets, such as the uses of the Divine Name or the rationales for sabbath observance;
+		report on parallel and divergent material across the Law and the Prophets;
 		classify and begin to evaluate a variety of ancient and modern approaches to the Bible.
 
 	Students should also be able to identify settings in which the
@@ -208,9 +206,14 @@ companion volumes useful.
 	AST Library: BS 1171.3 A37 2010.
 
 	\bibitem{rr86} Rendtorff, Rolf.
-	\emph{The Old Testament: An Introduction}.
+	\emph{The Old Testament: An Introduction}. Translated by John Bowden.
 	Philadelphia: Fortress, 1986.
 	AST Library: BS 1140.2 R3913 1986.
+
+	\bibitem{ks12} Schmid, Konrad.
+	\emph{The Old Testament: A Literary History}. Translated by Linda Maloney.
+	Minneapolis: Fortress, 2012.
+	AST Library: BS 1174.3 S3613 2012.
 	
 \end{thebibliography}
 \endgroup
@@ -340,12 +343,12 @@ The grade structure for \ccode has the following elements.
 		Note that a review is not the same thing as a report. Devote the
 		first half of the paper to a summary the interpretation or argument
 		under review, and be mindful that traditional interpretation
-		requires special attention to context. (Irenaeus's reading of Isaiah
-		is are not the same thing as a modern academic article on Isaiah.)
-		Devote the second half of the paper to critical analysis and
-		evaluation of your chosen example. Be fair, but do not fail to take
-		a position. The paper needs to develop a \textbf{thesis}. See me and
-		\cite[chs 3, 5–7, 11]{rlgs} for guidance.
+		requires special attention to context. (Irenaeus's treatment of
+		Isaiah is not the same thing as a modern academic article on the
+		prophet.) Devote the second half of the paper to critical analysis
+		and evaluation of your chosen example. Be fair, but do not fail to
+		take a position. The paper needs to develop a \textbf{thesis}. See
+		me and \cite[chs 3, 5–7, 11]{rlgs} for guidance.
 
 		\item An \textbf{exegetical essay} provides an opportunity for
 		direct work with the biblical text. The first task is to identify an
@@ -389,33 +392,34 @@ The grade structure for \ccode has the following elements.
 
 	\begin{enumerate}
 
-		\item Each student in the course must lead a discussion of one chapter
-		from the primary reading, to occur in the same week in which it is
-		assigned. Any chapter may be selected. Discussion should last twenty
-		minutes. It should begin with a brief overview (five minutes maximum) of
-		the chapter and critical issues raised by it. The balance of the time
-		should be spent helping the class discover, elaborate, reflect on, test,
-		or otherwise explore the meaning of the passage. Vital to success here
-		is the ability to ask good questions of the Bible.
+		\item Each student in the course must lead a discussion of one
+		chapter from the primary reading, to occur in the same week in which
+		it is assigned. Any chapter may be selected. Discussion should last
+		twenty minutes. It should begin with a brief overview (five minutes
+		maximum) of the chapter and key issues raised by it. The balance of
+		the time should be spent helping the class discover, elaborate,
+		reflect on, test, or otherwise explore the meaning of the passage.
+		Vital to success here is the ability to ask good questions of the
+		Bible.
 		
 		\item Each graduate student must lead a second discussion on a
-		supplementary reading. If the reading selection deviates from what is
-		set in the syllabus, consult with the professor to make sure the
+		supplementary reading. If the reading selection deviates from what
+		is set in the syllabus, consult with the professor to make sure the
 		alternate reading is circulated at least one week in advance. These
-		seminars, too, should occur in the same week in which the material is
-		assigned and should last twenty minutes. The allocation of time is
-		different, however. Approximately fifteen minutes should be given to
-		summary and analysis, with just five minutes at the end for questions
-		and class discussion. The goal here is for advanced degree students to
-		report on the results of critical inquiries into various noteworthy
-		examples of biblical interpretation.
+		seminars, too, should occur in the same week in which the material
+		is assigned and should last twenty minutes. The allocation of time
+		is different, however. Approximately fifteen minutes should be given
+		to summary and analysis, with just five minutes at the end for
+		questions and class discussion. The goal here is for advanced degree
+		students to report on the results of critical inquiries into various
+		noteworthy examples of biblical interpretation.
 		
-		\item Students are encouraged to align their essay writing with their
-		seminar topics. For example, it is perfectly acceptable to lead a
-		discussion on the biblical chapter in which the short passage for your
-		exegetical essay appears. It is also acceptable to let class discussion
-		spur revisions to your paper, of course with the understanding that you
-		credit others appropriately for their input.
+		\item Students are encouraged to align their essay writing with
+		their seminar topics. For example, it is perfectly acceptable to
+		lead a discussion on the biblical chapter in which the short passage
+		for your exegetical essay appears. It is also acceptable to let
+		class discussion spur revisions to your paper, of course with the
+		understanding that you credit others appropriately for their input.
 
 	\end{enumerate}
 
@@ -458,7 +462,7 @@ distributed as supplementary texts, as per \autoref{supplementary}.
 \renewcommand{\section}[2]{}% temporarily remove the section heading
 \begin{thebibliography}{99}
 \makeatletter%https://tex.stackexchange.com/a/114434
-\addtocounter{\@listctr}{13}
+\addtocounter{\@listctr}{14}
 \makeatother
 
 \bibitem{ra81} Alter, Robert. “The Techniques of Repetition.” Pages 88–113 in \emph{The Art of Biblical Narrative}. New York: Basic Books, 1981.
