schedule around Nicholson Lectures

--- a/BF/BF 1001-Driver 2023.tex
+++ b/BF/BF 1001-Driver 2023.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[4.0.0]{BF 1001}
+\coursecode[4.0.1]{BF 1001}
 \coursetitle[Biblical Foundations]{Hebrew Bible/Old Testament}
 
 % Taught as RLGS 1013 in:
@@ -264,22 +264,23 @@ the needs of the class.
 		& Exodus 1--18         & McGinnis                 \cite{cm12} & 21 Sep. \\
 		& Exodus 19--40        & Sommer                   \cite{bs15} & 28 Sep. \\
 	    & Leviticus (all if no chs) & Anderson            \cite{ga17} &  5 Oct. \\
-		& Deuteronomy          & Heschel \cite{ah51}; Moberly \cite{wm13} & 12 Oct. \\
-	\reminder{A short paper is \textbf{due} by the end of the \textbf{sixth week} of class}{17 Oct.} \\ [1ex]% Have moved btw wks 5 and 6 depending on how holidays (eg, Thanksgiving Monday) impact the schedule
+	\noclass{Nicholson Lectures by E. Radner @ 7pm}                   & 12 Oct. \\
+	\reminder{A short paper is \textbf{due} before the \textbf{sixth week} of class}{17 Oct.} \\% Have moved btw wks 5 and 6 depending on how holidays (eg, Thanksgiving Monday) impact the schedule
+		& Deuteronomy          & Heschel \cite{ah51}; Moberly \cite{wm13} & 19 Oct. \\ [1ex]
 
 	\unit{Prophets: Former \textit{\&} Latter} \\
 
-		& Joshua; Judges       & Trible                   \cite{pt84} & 19 Oct. \\
 	\noclass{Reading Week from Tuesday to Friday}                     & 24--27 Oct. \\
-		& 1 \& 2 Samuel        & Chapman                  \cite{sc16} &  2 Nov. \\
-		& 1 \& 2 Kings         & Alter                    \cite{ra81} &  9 Nov. \\
-		& Isaiah 1--12, 36--40 & Irenaeus \cite{il97}; Davis \cite{ed14} & 16 Nov. \\
-		& Hosea--Jonah         & Nogalski         \cite{jn07a, jn07b} & 23 Nov. \\
-	\reminder{A short paper is \textbf{due} by the end of the \textbf{eleventh week} of class}{28 Nov.} \\ [1ex]% NB Moved back from wk 11 to wk 10 because of the nearness of the last day of class in F22. Perhaps move back to wk 11 in future.
+		& Joshua; Judges       & Trible                   \cite{pt84} &  2 Nov. \\
+		& 1 \& 2 Samuel        & Chapman                  \cite{sc16} &  9 Nov. \\
+		& 1 \& 2 Kings         & Alter                    \cite{ra81} & 16 Nov. \\
+		& Isaiah 1--12, 36--40 & Irenaeus \cite{il97}; Davis \cite{ed14} & 23 Nov. \\
+		& Hosea--Jonah         & Nogalski         \cite{jn07a, jn07b} & 30 Nov. \\ [1ex]
 
 	\unit{Writings: Wisdom \textit{\&} Praise} \\
 
-		& Psalms 1--8; Ecclesiastes & Childs \cite{bc69}; Fox \cite{mf04} & 30 Nov. \\
+	\reminder{A short paper is \textbf{due} before the \textbf{twelfth week} of class}{5 Dec.} \\% NB Moved back from wk 11 to wk 10 because of the nearness of the last day of class in F22. Perhaps move back to wk 11 in future.
+		& Psalms 1--8; Ecclesiastes & Childs \cite{bc69}; Fox \cite{mf04} & 7 Dec. \\
 %		& Ecclesiastes         & Dell \cite{kd13} or  &  7 Dec. \\ [1ex]
 
 	\reminder{End of Term: Final marks are due for all courses}{14 Dec.} \\
@@ -325,8 +326,8 @@ The grade structure for \ccode has the following elements.
 	with the art of biblical interpretation. One is keyed to the
 	exposition of a model, the other to a short biblical text. Each
 	should be about 2,500 words in length. Either paper (your choice) is
-	due at the end of the sixth week of class; the other one is due at
-	the end of the eleventh week.
+	due before the sixth week of class; the other one is due before the
+	twelfth week.
 	% Deadlines have sometimes been wks 6 and 11 or wks 5 and 10 depending
 	% on scheduling issues. Make sure that what is stated here matches the
 	% schedule above.
@@ -341,14 +342,15 @@ The grade structure for \ccode has the following elements.
 		different source.
 		
 		Note that a review is not the same thing as a report. Devote the
-		first half of the paper to a summary the interpretation or argument
-		under review, and be mindful that traditional interpretation
-		requires special attention to context. (Irenaeus's treatment of
-		Isaiah is not the same thing as a modern academic article on the
-		prophet.) Devote the second half of the paper to critical analysis
-		and evaluation of your chosen example. Be fair, but do not fail to
-		take a position. The paper needs to develop a \textbf{thesis}. See
-		me and \cite[chs 3, 5–7, 11]{rlgs} for guidance.
+		first half of the paper to a summary the interpretation or
+		argument under review, and be mindful that traditional
+		interpretation requires special attention to context.
+		(Irenaeus's treatment of Isaiah is quite unlike modern academic
+		commentary.) Devote the second half of the paper to critical
+		analysis and evaluation of your chosen example. Be fair, but do
+		not fail to take a position. The paper needs to develop a
+		\textbf{thesis}. See me and \cite[chs 3, 5–7, 11]{rlgs} for
+		guidance.
 
 		\item An \textbf{exegetical essay} provides an opportunity for
 		direct work with the biblical text. The first task is to identify an
