update office hours, add URL

--- a/includes/variables.tex
+++ b/includes/variables.tex
@@ -38,7 +38,8 @@
   \renewcommand\pemail{\href{mailto:#1}{#1}\xspace}}
 \newcommand\officehours[2][AST Library/Teams]{
   \renewcommand\poffice{#1\xspace}
-  \renewcommand\phours{#2\xspace}}
+  \renewcommand\phours{\href{https://outlook.office.com/bookwithme/user/b97b147a2e5c43b4a0e200c2cb630b77@astheology.ns.ca?anonymous}{#2}\xspace}%
+  }
 %
 \newcommand\coursecode[2][1.0]{
   \renewcommand\cversion{#1\xspace}
