simplify supplementary readings
Just one per week, and add pub date

--- a/BF/BF 1001-Driver 2023.tex
+++ b/BF/BF 1001-Driver 2023.tex
@@ -254,33 +254,33 @@ the needs of the class.
   \centering
   \begin{tabular}{>{\sessioncount.}r@{ }llr}% make sure the column config agrees with \setcolumncount
 	\toprule
-	\sessionskip{\textbf{\S}.}&\textbf{Primary reading (chs)}&\textbf{Supplementary reading}&\textbf{Due}\\
+	\sessionskip{\textbf{\S}.}&\textbf{Primary reading}&\textbf{Supplement}&\textbf{Due}\\
 	\midrule
 
 	\unit{Law / Torah / Pentateuch} \\
 
-		& Genesis 1--11        & Davis \cite{ed03}; Seitz \cite{cs96} &  7 Sep. \\
-		& Genesis 12--50       & Levenson                 \cite{jl12} & 14 Sep. \\
-		& Exodus 1--18         & McGinnis                 \cite{cm12} & 21 Sep. \\
-		& Exodus 19--40        & Sommer                   \cite{bs15} & 28 Sep. \\
-	    & Leviticus (all if no chs) & Anderson            \cite{ga17} &  5 Oct. \\
+		& Genesis 1--11        & Childs 1977              \cite{bc77} &  7 Sep. \\
+		& Genesis 12--50       & Levenson 2012            \cite{jl12} & 14 Sep. \\
+		& Exodus 1--18         & McGinnis 2012            \cite{cm12} & 21 Sep. \\
+		& Exodus 19--40        & Sommer 2015              \cite{bs15} & 28 Sep. \\
+	    & Leviticus (all if no chs) & Anderson 2017       \cite{ga17} &  5 Oct. \\
 	\noclass{Nicholson Lectures by E. Radner @ 7pm}                   & 12 Oct. \\
 	\reminder{A short paper is \textbf{due} before the \textbf{sixth week} of class}{17 Oct.} \\% Have moved btw wks 5 and 6 depending on how holidays (eg, Thanksgiving Monday) impact the schedule
-		& Deuteronomy          & Heschel \cite{ah51}; Moberly \cite{wm13} & 19 Oct. \\ [1ex]
+		& Deuteronomy          & Moberly 2013             \cite{wm13} & 19 Oct. \\ [1ex]
 
 	\unit{Prophets: Former \textit{\&} Latter} \\
 
 	\noclass{Reading Week from Tuesday to Friday}                     & 24--27 Oct. \\
-		& Joshua; Judges       & Trible                   \cite{pt84} &  2 Nov. \\
-		& 1 \& 2 Samuel        & Chapman                  \cite{sc16} &  9 Nov. \\
-		& 1 \& 2 Kings         & Alter                    \cite{ra81} & 16 Nov. \\
-		& Isaiah 1--12, 36--40 & Irenaeus \cite{il97}; Davis \cite{ed14} & 23 Nov. \\
-		& Hosea--Jonah         & Nogalski         \cite{jn07a, jn07b} & 30 Nov. \\ [1ex]
+		& Joshua; Judges       & Trible 1984              \cite{pt84} &  2 Nov. \\
+		& 1 \& 2 Samuel        & Chapman 2016             \cite{sc16} &  9 Nov. \\
+		& 1 \& 2 Kings         & Alter 1981               \cite{ra81} & 16 Nov. \\
+		& Isaiah 1--12, 36--40 & Davis 2014               \cite{ed14} & 23 Nov. \\
+		& Hosea--Jonah         & Nogalski 2007    \cite{jn07a, jn07b} & 30 Nov. \\ [1ex]
 
 	\unit{Writings: Wisdom \textit{\&} Praise} \\
 
 	\reminder{A short paper is \textbf{due} before the \textbf{twelfth week} of class}{5 Dec.} \\% NB Moved back from wk 11 to wk 10 because of the nearness of the last day of class in F22. Perhaps move back to wk 11 in future.
-		& Psalms 1--8; Ecclesiastes & Childs \cite{bc69}; Fox \cite{mf04} & 7 Dec. \\
+		& Psalms 1--8; Ecclesiastes & Fox 2004            \cite{mf04} & 7 Dec. \\
 %		& Ecclesiastes         & Dell \cite{kd13} or  &  7 Dec. \\ [1ex]
 
 	\reminder{End of Term: Final marks are due for all courses}{14 Dec.} \\
@@ -477,15 +477,17 @@ distributed as supplementary texts, as per \autoref{supplementary}.
 
 \bibitem{sc16} Chapman, Stephen B. “1 Samuel 1–12.” Pages 71–119 in \emph{1 Samuel as Christian Scripture: A Theological Commentary}. Grand Rapids: Eerdmans, 2016.
 
+\bibitem{bc69} Childs, Brevard S. “Psalm 8 in the Context of the Christian Canon.” Pages 85--93 in \emph{Canon as Rule and Guide: Collected Essays}. Edited by Daniel R. Driver. Forschungen zum Alten Testament. Tübingen: Mohr Siebeck, 2023.
+
+\bibitem{bc77} Childs, Brevard S. “The \emph{Sensus Literalis} of Scripture: An Ancient and Modern Problem.” Pages 169--80 in \emph{Canon as Rule and Guide: Collected Essays}. Edited by Daniel R. Driver. Forschungen zum Alten Testament. Tübingen: Mohr Siebeck, 2023.
+
 \bibitem{bc79} Childs, Brevard S. \emph{Introduction to the Old Testament as Scripture}. Philadelphia: Fortress, 1979.
 
-\bibitem{bc85} Childs, Brevard S. \emph{Old Testament Theology in a Canonical Context}. Philadelphia: Fortress, 1985.
+%\bibitem{bc85} Childs, Brevard S. \emph{Old Testament Theology in a Canonical Context}. Philadelphia: Fortress, 1985.
 
 %\bibitem{bc92} Childs, Brevard S. \emph{Biblical Theology of the Old and New Testaments: Theological Reflection on the Christian Bible}. Minneapolis: Fortress, 1992.
 
 \bibitem{bc04} Childs, Brevard S. \emph{The Struggle to Understand Isaiah as Christian Scripture}. Grand Rapids: Eerdmans, 2004.
-
-\bibitem{bc69} Childs, Brevard S. “Psalm 8 in the Context of the Christian Canon.” Pages 85--93 in \emph{Canon as Rule and Guide: Collected Essays}. Edited by Daniel R. Driver. Tübingen: Mohr Siebeck, 2023. Essay first published in 1969.
 
 \bibitem{ed03} Davis, Ellen F. “Teaching the Bible Confessionally in the Church.” Pages 9–26 in \emph{The Art of Reading Scripture}. Edited by Ellen F. Davis and Richard B. Hays. Grand Rapids: Eerdmans, 2003.
 
