F23 version (2.2) of HB 3111: Genesis

--- a/BF/BF 1001-Driver 2023.tex
+++ b/BF/BF 1001-Driver 2023.tex
@@ -341,16 +341,15 @@ The grade structure for \ccode has the following elements.
 		supplementary article from \autoref{bib} or propose an entirely
 		different source.
 
-		Note that a review is not the same thing as a report. Devote the
-		first half of the paper to a summary the interpretation or
-		argument under review, and be mindful that traditional
-		interpretation requires special attention to context.
-		(Irenaeus's treatment of Isaiah is quite unlike modern academic
-		commentary.) Devote the second half of the paper to critical
-		analysis and evaluation of your chosen example. Be fair, but do
-		not fail to take a position. The paper needs to develop a
-		\textbf{thesis}. See me and \cite[chs 3, 5–7, 11]{rlgs} for
-		guidance.
+		Note that a book review is not the same thing as a book report.
+		Devote the first half of the paper to a summary the interpretation
+		or argument under review, and be mindful that traditional
+		interpretation requires special attention to context. (Irenaeus's
+		treatment of Isaiah is quite unlike modern academic commentary.)
+		Devote the second half of the paper to critical analysis and
+		evaluation of your chosen example. Be fair, but do not fail to take
+		a position. The paper needs to develop a \textbf{thesis}. See me and
+		\cite[chs 3, 5–7, 11]{rlgs} for guidance.
 
 		\item An \textbf{exegetical essay} provides an opportunity for
 		direct work with the biblical text. The first task is to identify an
@@ -540,11 +539,11 @@ distributed as supplementary texts, as per \autoref{supplementary}.
 \end{thebibliography}
 \endgroup
 
-For additional literature, I highly recommend exploring \href{https://go.openathens.net/redirector/astheology.ns.ca?url=https://www.oxfordbibliographies.com/obo/page/biblical-studies}{Oxford Bibliographies: Biblical Studies (Full Text)}.
-You can access the database automatically while on campus or remotely with your
-OpenAthens credentials. Numerous articles by subject-area specialists appear
-under such headings as: Ancient Near East; Bible; Early Christianity;
-Greco-Roman World; Hebrew Bible; New Testament; Rabbinic Judaism; Second Temple
-Judaism.
+For additional literature, I recommend exploring \href{https://go.openathens.net/redirector/astheology.ns.ca?url=https://www.oxfordbibliographies.com/obo/page/biblical-studies}{Oxford Bibliographies: Biblical Studies (Full Text)}.
+You can access the database automatically while on campus or remotely
+with OpenAthens credentials. Numerous articles by subject-area
+specialists appear under such headings as: Ancient Near East; Bible;
+Early Christianity; Greco-Roman World; Hebrew Bible; New Testament;
+Rabbinic Judaism; Second Temple Judaism.
 
 \end{document}
