--- a/includes/variables.tex
+++ b/includes/variables.tex
@@ -59,7 +59,7 @@
   \renewcommand\cmeetsin{\Int{\href{https://smu.brightspace.com/d2l/login}{Brightspace}}{#3}\xspace}}
 \newcommand\website[1]{
   \renewcommand\cwebsite{\href{https://#1}{#1}\xspace}}
-\newcommand\cdescription[2][BF 1001 and RM 1000 or GTRS 6000]{
+\newcommand\cdescription[2][BF 1001; RM 1000 or GTRS 6000]{
   \renewcommand\cprereqs{#1}
   \renewcommand\cdescrip{#2\par}}
 \newcommand\objectives[1]{
