Add variable for BTh courses
Distinguish grad and BTh syllabi from within the same master documents

--- a/HB/HB 3111-Genesis-Driver 2023.tex
+++ b/HB/HB 3111-Genesis-Driver 2023.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2017 by Daniel R. Driver.
+% Copyright (c) 2023 by Daniel R. Driver.
 % !TEX encoding = UTF-8 Unicode
 % !TEX TS-program = XeLaTeX
 
@@ -11,7 +11,9 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[2.2]{HB 3111}
+%\bthtrue % \bth{true}{false}
+%\onlinetrue % \Int{true}{false}
+\coursecode[2.2]{HB 3111\bth{-BTh}{}}
 \coursetitle[Hebrew Bible]{The Book of Genesis}
 
 % Taught as RLGS 3213 (T&I: Genesis) in:
@@ -20,7 +22,7 @@
 %   - Fall 2013 (students dropped until it became a DS with the one left)
 % Taught as HB 3111 in:
 %   - Winter 2017
-%   - Fall 2023
+%   - Fall 2023 (4 grad students, 1 BTh, 2 ConEd)
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
@@ -292,14 +294,17 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 		different resources from the exegetical tradition, come prepared
 		each week to be the resident expert on your particular commentary.
 
-		\item Twice in the term, students will lead 20-minute seminars on
-		single chapters from the book of Genesis. They should take the lead
-		by briefly outlining the chapter in question, situating it relative
-		to the rest of Genesis, and reporting on their research into part of
-		that chapter. Then, in the balance of the time, they should helping
-		the class elaborate, reflect on, test, challenge, or extend a
-		central idea or two. Students are encouraged to align at least one
-		of their seminar texts with their work on their exegetical paper.
+		\item \bth{Once in the term, BTh students will lead a 20-minute
+		seminar on a single chapter}{Twice in the term, graduate
+		students will lead 20-minute seminars on single chapters} from
+		the book of Genesis. They should take the lead by briefly
+		outlining the chapter in question, situating it relative to the
+		rest of Genesis, and reporting on their research into part of
+		that chapter. Then, in the balance of the time, they should
+		helping the class elaborate, reflect on, test, challenge, or
+		extend a central idea or two. Students are encouraged to align
+		\bth{their seminar text}{at least one of their seminar texts}
+		with their work on their exegetical paper.
 
 	\end{enumerate}
 
@@ -310,11 +315,12 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 
 	\begin{enumerate}
 
-		\item A \textbf{review essay} invites student reflection on a model
-		work of biblical interpretation. Some pre-approved options are
-		listed as further readings in \autoref{bib}. Alternatively, you may
-		propose a different title to the professor, subject to approval. The
-		review essay should be \textbf{3,000 words} in length.
+		\item A \textbf{review essay} invites student reflection on a
+		model work of biblical interpretation. Some pre-approved options
+		are listed as further readings in \autoref{bib}. Alternatively,
+		you may propose a different title to the professor, subject to
+		approval. The review essay should be \textbf{\bth{2,500}{3,000}
+		words} in length.
 
 		Note that a review is not the same thing as a report. Devote the
 		first half of the paper to a summary the interpretation or argument
@@ -325,13 +331,13 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 		guidance.
 
 		\item An \textbf{exegetical essay} provides an opportunity for
-		direct work with the biblical text. The first task is to identify an
-		appropriate text. Select a suitably short passage from Genesis.
-		Then, conduct an analysis and explication of it. Interact with at
-		least five sources and commentators. Advance a \textbf{thesis} that
-		relates to the text itself. The exegetical essay should be
-		\textbf{4,000 words} in length. See me and \cite[chs 3, 5, 8,
-		11]{rlgs} for guidance.
+		direct work with the biblical text. The first task is to
+		identify an appropriate text. Select a suitably short passage
+		from Genesis. Then, conduct an analysis and explication of it.
+		Interact with at least five sources and commentators. Advance a
+		\textbf{thesis} that relates to the text itself. The exegetical
+		essay should be \textbf{\bth{3,300}{4,000} words} in length. See
+		me and \cite[chs 3, 5, 8, 11]{rlgs} for guidance.
 
 	\end{enumerate}
 
