W24 syllabus for The Twelve

--- a/HB/HB 3111-Genesis-Driver 2023.tex
+++ b/HB/HB 3111-Genesis-Driver 2023.tex
@@ -33,7 +33,7 @@
 \meets{Tuesdays}% \meets{on}{at}{in}
       {9:00--11:30 \AM}
       {Flahiff Room/Zoom}
-\website{danieldriver.com}
+\website[https://danieldriver.com/courses/hb-3114/]{nytimes.com}
 \cdescription{% copy from the current Academic Calendar
 	From the creation of the world to the call of Abraham, and from the
 	promise of children to the establishment of the people Israel, the book
