--- a/includes/variables.tex
+++ b/includes/variables.tex
@@ -59,8 +59,12 @@
   \renewcommand\cmeetson{#1\xspace}
   \renewcommand\cmeetsat{\Int{From 9:00 \AM}{#2}\xspace}
   \renewcommand\cmeetsin{\Int{\href{https://smu.brightspace.com/d2l/login}{Brightspace}}{#3}\xspace}}
-\newcommand\website[1]{
-  \renewcommand\cwebsite{\href{https://#1}{#1}\xspace}}
+\newcommand\website[2][]{
+  \renewcommand\cwebsite{
+  \ifthenelse{\isempty{#1}}%
+    {\href{https://#2}}% copy url if #1 is empty, else
+    {\href{#1}}% use specified url and print #2
+  {#2}\xspace}}
 \newcommand\cdescription[2][BF 1001; RM 1000 or GTRS 6000]{
   \renewcommand\cprereqs{#1}
   \renewcommand\cdescrip{#2\par}}
