refinements to F24 syllabus
- lowercase book of Twelve
- sg > pl in texts
- add always recommended sup texts
- clarify assignments

--- a/HB/HB 3114-The XII-Driver 2024.tex
+++ b/HB/HB 3114-The XII-Driver 2024.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[2.1]{HB 3114}
+\coursecode[2.1.1]{HB 3114}
 \coursetitle{The Twelve Prophets}
 
 % Taught as RLGS 3143 in:
@@ -33,9 +33,9 @@
       {Classroom 3/Teams}
 \website[https://danieldriver.com/courses/hb-3114/]{danieldriver.com}
 \cdescription{% copy from the current Academic Calendar
-	To better understand the origins and impact of the Book of the
-	Twelve, this course will look at its redactional history and
-	editorial shaping, its final canonical forms, and its effects as
+	To better understand the origins and impact of the book of the
+	Twelve Prophets, this course will look at its redactional history
+	and editorial shaping, its final canonical forms, and its effects as
 	biblical prophecy. It will introduce current issues in scholarly
 	debate about the Twelve while also exploring ways that they meet the
 	ancient expectation that their “bones” can “send forth new life”
@@ -59,7 +59,7 @@
 \label{texts}
 
 In addition to \textbf{the Bible in a modern translation} such as the
-NJPS or NRSV, the following text is required. Students are strongly
+NJPS or NRSV, the following texts are required. Students are strongly
 encouraged to purchase their own copies. AST Library copies will be
 placed on a two-hour reserve.
 
@@ -139,6 +139,29 @@ not required.
 \end{thebibliography}
 \endgroup
 
+Also, the following basic works are also worth consulting and even owning.
+\cite{rlgs} in particular contains sound advice on core skills like
+reading religious texts, writing essays and reviews, revising essays,
+making oral presentations, and learning languages.
+
+\begingroup
+\renewcommand{\section}[2]{}% temporarily remove the section heading
+\begin{thebibliography}{Making}% use the longest item in the bibliography
+
+	\bibitem[Making]{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
+	\emph{Making Sense in Religious Studies: A Student's Guide to Research and Writing}.
+	3rd ed. Toronto: Oxford University Press, 2019. AST Library: Reference BL 41 N67 2019.
+
+	\bibitem[SBL2]{sbl2} Collins, Billie Jean, et al.
+	\emph{The SBL Handbook of Style}.
+	2nd ed. Atlanta: SBL Press, 2014.
+	Designed to augment \href{https://proxy.openathens.net/login?qurl=https%3A%2F%2Fwww.chicagomanualofstyle.org%2Fbook%2Fed17%2Ffrontmatter%2Ftoc.html}{\emph{Chicago Style}}
+	(the standard at AST), there is also a free
+	\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement for SBL2}. AST Library: Reference PN 147 S26 2014.
+
+\end{thebibliography}
+\endgroup
+
 \section{Course Outline}
 \label{outline}
 
@@ -200,16 +223,18 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 	\item At some point in the semester, each student should read and
 	report back to the class about some recent scholarship on the book
 	of the Twelve. This \textbf{reading report} should be scheduled
-	between weeks two and twelve, to the extent possible with only one
-	student per week. The reading should be drawn from the literature in
+	between weeks two and twelve with only one student per week.
+	Presentations will be allotted 20 minutes. The report itself should
+	last approximately 15 minutes, allowing 5 minutes for questions
+	after. The reading should be drawn from the literature in
 	\autoref{supplementary} or \autoref{bib}, selected in consultation
-	with the professor.
+	with the professor. 
 
 	\item A \textbf{first essay} will be due at the end of the sixth
 	week of class (Sunday, 18 February 2024). It should be 4,000 words
 	long, plus or minus 250 words. It should answer the following
 	question: \emph{How does the book of Hosea speak to the goodness of
-	God and the sovereignty of God?}
+	God and the sovereignty of God?} The paper must advance a thesis.
 
 	\item A \textbf{second essay} will be due at the end of the eleventh
 	week of class (Sunday, 7 April 2024). It should be 4,000 words long,
@@ -221,7 +246,7 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 	follows Hosea. If this question does not appeal, students are
 	invited to propose an alternate question to the professor. The
 	professor reserves the right to turn down the proposal or to make a
-	counterproposal.
+	counterproposal. The paper must advance a thesis.
 	
 \end{enumerate}
 
@@ -251,7 +276,7 @@ The breakdown for the semester's total work is shown in
 
 Access and study the following resources:
 
-Schart, Aaron. “Bibliography on the Book of the Twelve Prophets.” This database with nearly all literature on the Book of the Twelve since 2010 is maintained at \url{https://www.zotero.org/groups/twelveprophets/items}.
+Schart, Aaron. “Bibliography on the Book of the Twelve Prophets.” This database with nearly all literature on the book of the Twelve since 2010 is maintained and shared freely by the author at \url{https://www.zotero.org/groups/twelveprophets/items}.
 
 Sweeney, Marvin A. “Book of the Twelve Prophets.” In \emph{Oxford Bibliographies: Biblical Studies}, \href{https://go.openathens.net/redirector/astheology.ns.ca?url=https://www.oxfordbibliographies.com/view/document/obo-9780195393361/obo-9780195393361-0016.xml}{https://www.oxfordbibliographies.com/view/document/obo-9780195393361/obo-9780195393361-0016.xml} (last modified 30 March 2015). AST students can sign in with their OpenAthens credentials.
 
