designate hybrid iterations

--- a/HB/HB 3111-Genesis-Driver 2023.tex
+++ b/HB/HB 3111-Genesis-Driver 2023.tex
@@ -22,7 +22,7 @@
 %   - Fall 2013 (students dropped until it became a DS with the one left)
 % Taught as HB 3111 in:
 %   - Winter 2017
-%   - Fall 2023 (4 grad students, 1 BTh, 2 ConEd)
+%   - Fall 2023 (hybrid; 4 grad students, 1 BTh, 2 ConEd)
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
