--- a/HB/HB 3114-The XII-Driver 2024.tex
+++ b/HB/HB 3114-The XII-Driver 2024.tex
@@ -20,7 +20,7 @@
 %   - Winter 2013
 % Taught as HB 3114 in:
 %   - Winter 2018
-%   - Winter 2024
+%   - Winter 2024 (hybrid)
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
